# connect4

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: game.hpp  grid.hpp
src/: connect4.cpp  game.cpp  grid.cpp  main.cpp
